--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>Jonas Lima | Social</title>
-    <meta name="description" content="birobirobiro" />
+    <meta name="description" content="" />
     <meta name="author" content="" />
 
     <!-- Mobile Specific Metas
