--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <a
             class="button button-twitter"
             target="_blank"
-            href="https://twitter.com/JonasLi30549815/"
+            href="https://twitter.com/jonaslc_/"
             ><img class="icon" src="icons/twitter.svg" />Twitter</a
           >
           <br />
